# azure-local-deplpy-app

./: .gitignore  README.md  add-node-test-config.yaml  adv01_network_config.txt  apply_firmware_updates.py  audit_nic_firmware.py  boot_iso_domain.py  boot_iso_retry.py  check_adv01_brcm.py  check_bios_info.py  check_bios_job.py  check_bios_nic.py  check_bios_slots.py  check_bios_state.py  check_bios_vals.py  check_catalog_brands.py  check_catalog_models.py  check_dell_catalog.py  check_fw_status.py  check_scp_logs.py  check_scp_logs2.py  check_ssh_adv01.ps1  check_update_options.py  debug_vmedia.py  deploy-config.sample.yaml  discover_servers.py  eject_media.py  enable_adv01_brcm.py  enable_adv01_brcm_v2.py  enable_adv01_brcm_v3.py  enable_brcm_import.py  enable_slot2.py  enable_ssh_adv01.ps1  find_fw_catalog.py  fix_bios.py  fix_broadcom_nicmode.py  fix_firewall.ps1  get_dell_updates.py  get_tenant.py  install_os_new_servers.py  (+22 more)
designs/: rebuild-cluster-module.md
scripts/bios/: check_bios_registry.py  check_nic_bios.py  check_nic_registry.py  check_slots.py  dry_run_bios.py
scripts/discovery/: check_new_servers.py  check_status.py  query_adv01.py  query_idrac_nics.py  query_idrac_nics2.py
scripts/firmware/: check_brcm_fw.py  compare_firmware.py  explore_update_svc.py  find_bios_update.py  find_brcm_driver.py  install_drivers_adv02.py  install_dsu.py  (+2 more)
tests/: test_bios.py  test_config.py  test_docs_checker.py  test_environment_checker.py  test_firmware.py  test_idrac_client.py  test_phase_enhancements.py  test_utils.py  test_validation.py  test_web_wizard.py
(+94 files in other folders)
